--- a/HeroesRandomiser.Web/ClientApp/public/manifest.json
+++ b/HeroesRandomiser.Web/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Heroes Randomiser",
+  "name": "Heroes Randomiser",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +10,7 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#221e4a",
+  "background_color": "#221e4a"
 }
