--- a/HeroesRandomiser.Web/ClientApp/package.json
+++ b/HeroesRandomiser.Web/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "normalize.css": "^8.0.0",
+    "prismic-reactjs": "^0.3.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
