--- a/HeroesRandomiser.Web/ClientApp/package.json
+++ b/HeroesRandomiser.Web/ClientApp/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "normalize.css": "^8.0.0",
-    "prismic-reactjs": "^0.3.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
+    "normalize.css": "^8.0.1",
+    "prismic-reactjs": "^0.3.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.0.0-beta.11.3"
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
