--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,23 +14,24 @@ steps:
   inputs:
     versionSpec: '14.16.1'
 
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
+- task: UseDotNet@2
   inputs:
-    restoreSolution: '$(solution)'
+    packageType: 'sdk'
+    version: '5.0.x'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: '**/*.csproj'
+    feedsToUse: 'config'
+    nugetConfigPath: './nuget.config'
 
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-c release -o $(build.artifactStagingDirectory) --self-contained true --runtime ubuntu.19.04-x64 HeroesRandomiser.Web.csproj'
+    arguments: '-c Release -o $(build.artifactStagingDirectory) --self-contained true --runtime ubuntu.20.04-x64 HeroesRandomiser.Web.csproj'
     workingDirectory: './HeroesRandomiser.Web'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
 
 - task: PublishBuildArtifacts@1
   inputs:
