--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,13 @@ steps:
 - task: NodeTool@0
   inputs:
     versionSpec: '14.16.1'
+  displayName: "Install node.js"
 
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
     version: '5.0.x'
+  displayName: "Install .NET SDK"
 
 - task: DotNetCoreCLI@2
   inputs:
@@ -25,16 +27,19 @@ steps:
     projects: '**/*.csproj'
     feedsToUse: 'config'
     nugetConfigPath: './nuget.config'
+  displayName: "dotnet restore"
 
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-c $(buildConfiguration) -o "$(build.artifactStagingDirectory)" --self-contained true --runtime ubuntu.20.04-x64 HeroesRandomiser.Web.csproj'
+    arguments: '-c $(buildConfiguration) -o $(build.artifactStagingDirectory) --self-contained true --runtime ubuntu.20.04-x64'
     workingDirectory: './HeroesRandomiser.Web'
+  displayName: "dotnet publish"
 
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(build.artifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+  displayName: "Publish artefact"
